--- a/style.css
+++ b/style.css
@@ -186,6 +186,9 @@ footer p {
   color: #ececec;
 }
 
-
+@font-face {
+    font-family: Roboto;
+    src: url("../everyday-excitement/Roboto-Black.ttf") format('truetype');
+}
 /* Blank lines for ease and view */
 /* */
