--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ body {
   color: #444444;
   padding: 0;
   margin: 0;
-  perspective: 1px;
-  transform-style: preserve-3d;
   height: 100%;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
@@ -42,8 +40,7 @@ body {
 }
 div.navbar {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0px;
   width: 100%;
   background: #ee6e73;
   -webkit-box-shadow: 0px 2px 6px 0px rgba(50, 50, 50, 0.75);
